changed title to trainer

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Logical Expressions Game</title>
+  <title>Logical Expressions Trainer</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <style>
     body {
@@ -36,7 +36,7 @@
 <body>
 
 <div id="game-container">
-  <h1 class="text-center">Logical Expressions Game</h1>
+  <h1 class="text-center">Logical Expressions Trainer</h1>
   
   <div id="question" class="text-center"></div>
 
