--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
   <div id="question" class="text-center"></div>
 
   <div class="text-center">
-    <button class="btn btn-success" onclick="toggleAnswer()">?</button>
-    <button class="btn btn-primary" onclick="checkAnswer()">OK</button>
+    <button class="btn btn-success" onclick="checkAnswer()">OK</button>
   </div>
 
   <div id="progress-bar" class="progress">
@@ -57,7 +56,7 @@
   let correctAnswers = 0;
   let wrongAnswers = 0;
   let score = 0;
-  let isAnswerShown = false;
+  let isAnswerZero = true;
 
   function generateQuestion(level) {
     let expressions;
@@ -84,7 +83,7 @@
   }
 
   function updateUI() {
-    $('#question').text(generateQuestion(currentLevel) + ' = ?');
+    $('#question').html(generateQuestion(currentLevel) + ` = ${isAnswerZero ? '0' : '1'}`);
     $('#progress-bar-inner').css('width', (correctAnswers / 5) * 100 + '%');
     $('#level-info').text(`Level: ${currentLevel}`);
     $('#remaining-levels').text(`Levels Remaining: ${5 - correctAnswers}`);
@@ -92,41 +91,37 @@
   }
 
   function toggleAnswer() {
-    isAnswerShown = !isAnswerShown;
+    isAnswerZero = !isAnswerZero;
     updateUI();
   }
 
   function checkAnswer() {
-    if (isAnswerShown) {
-      const correctAnswer = evaluateExpression(generateQuestion(currentLevel));
+    const correctAnswer = evaluateExpression(generateQuestion(currentLevel));
 
-      if ($('#question').data('answer') == correctAnswer) {
-        correctAnswers++;
-        score++;
-      } else {
-        wrongAnswers++;
-        score = Math.max(0, score - 1);
-      }
-
-      if (wrongAnswers >= 3) {
-        if (currentLevel > 2) {
-          currentLevel -= 2;
-        } else {
-          currentLevel = 1;
-        }
-        wrongAnswers = 0;
-      }
-
-      if (correctAnswers >= 5) {
-        currentLevel++;
-        correctAnswers = 0;
-      }
-
-      isAnswerShown = false;
-      updateUI();
+    if (isAnswerZero == correctAnswer) {
+      correctAnswers++;
+      score++;
     } else {
-      alert('Please choose an answer before clicking OK.');
+      wrongAnswers++;
+      score = Math.max(0, score - 1);
     }
+
+    if (wrongAnswers >= 3) {
+      if (currentLevel > 2) {
+        currentLevel -= 2;
+      } else {
+        currentLevel = 1;
+      }
+      wrongAnswers = 0;
+    }
+
+    if (correctAnswers >= 5) {
+      currentLevel++;
+      correctAnswers = 0;
+    }
+
+    isAnswerZero = true;
+    updateUI();
   }
 
   function evaluateExpression(expression) {
