--- a/fromBeggining.html
+++ b/fromBeggining.html
@@ -29,6 +29,11 @@
       margin-bottom: 20px;
     }
 
+    #answer {
+      font-size: 20px;
+      margin-top: 10px;
+    }
+
     #new-expression-button {
       font-size: 18px;
     }
@@ -38,24 +43,50 @@
 
 <div id="expression-container">
   <div id="expression"></div>
+  <div id="answer"></div>
   <button id="new-expression-button" class="btn btn-primary" onclick="generateNewExpression()">New Expression</button>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script>
   const expressions = [
     '1 + 1',
     '1 + 0',
-    '0 + 1'
+    '0 + (0 * 1)',
+    '!1'
   ];
 
   function generateNewExpression() {
     const randomIndex = Math.floor(Math.random() * expressions.length);
     const selectedExpression = expressions[randomIndex];
+    const answer = evaluateExpression(selectedExpression);
+
     document.getElementById('expression').innerHTML = selectedExpression;
+    document.getElementById('answer').innerHTML = `Correct Answer: ${answer}`;
   }
+
+  function evaluateExpression(expression) {
+    let convertedExpression = [];
+    for (let i = 0; i < expression.length; i++) {
+      if (expression[i] === "1") {
+        convertedExpression.push("1");
+      } else if (expression[i] === "0") {
+        convertedExpression.push("0");
+      } else if (expression[i] === "!") {
+        convertedExpression.push("!");
+      } else if (expression[i] === "×" || expression[i] === "*") {
+        convertedExpression.push("&&");
+      } else if (expression[i] === "+") {
+        convertedExpression.push("||");
+      } else {
+        convertedExpression.push(expression[i]);
+      }
+    }
+    let jsLogicalExpression = convertedExpression.join("");
+    return eval(jsLogicalExpression) ? 1 : 0;
+  }
+
+  // Initial expression setup when the page loads
+  generateNewExpression();
 </script>
 
 </body>
