--- a/fromBeggining.html
+++ b/fromBeggining.html
@@ -34,8 +34,18 @@
       margin-bottom: 10px;
     }
 
+    #answer {
+      font-size: 20px;
+      margin-top: 10px;
+    }
+
     #new-expression-button {
       font-size: 18px;
+    }
+
+    #question-mark {
+      cursor: pointer;
+      color: blue;
     }
   </style>
 </head>
@@ -44,6 +54,7 @@
 <div id="expression-container">
   <div id="expression"></div>
   <div id="level"></div>
+  <div id="answer"></div>
   <button id="new-expression-button" class="btn btn-primary" onclick="generateNewExpression()">New Expression</button>
 </div>
 
@@ -73,30 +84,28 @@
     const expressions = levels[currentLevel - 1];
     const randomIndex = Math.floor(Math.random() * expressions.length);
     const selectedExpression = expressions[randomIndex];
-    const answer = evaluateExpression(selectedExpression);
 
-    document.getElementById('expression').innerHTML = `${selectedExpression} = ${answer}`;
+    document.getElementById('expression').innerHTML = `${selectedExpression} = <span id="question-mark" onclick="startToggle()">?</span>`;
+    document.getElementById('answer').innerHTML = '';
   }
 
-  function evaluateExpression(expression) {
-    let convertedExpression = [];
-    for (let i = 0; i < expression.length; i++) {
-      if (expression[i] === "1") {
-        convertedExpression.push("1");
-      } else if (expression[i] === "0") {
-        convertedExpression.push("0");
-      } else if (expression[i] === "!") {
-        convertedExpression.push("!");
-      } else if (expression[i] === "×" || expression[i] === "*") {
-        convertedExpression.push("&&");
-      } else if (expression[i] === "+") {
-        convertedExpression.push("||");
-      } else {
-        convertedExpression.push(expression[i]);
-      }
+  function startToggle() {
+    const questionMark = document.getElementById('question-mark');
+    questionMark.textContent = '0'; // Initialize to 0
+    questionMark.onclick = function() {
+      toggleAnswer();
+    };
+  }
+
+  function toggleAnswer() {
+    const questionMark = document.getElementById('question-mark');
+    const currentAnswer = questionMark.textContent;
+
+    if (currentAnswer === '0') {
+      questionMark.textContent = '1';
+    } else if (currentAnswer === '1') {
+      questionMark.textContent = '0';
     }
-    let jsLogicalExpression = convertedExpression.join("");
-    return eval(jsLogicalExpression) ? 1 : 0;
   }
 
   // Initial expression setup when the page loads
