--- a/fromBeggining.html
+++ b/fromBeggining.html
@@ -67,20 +67,25 @@
     ['(1 + 1) * 1', '(1 + 0) * 0', '(0 + 1) * 0']
   ];
 
-  let currentLevel = 1;
+  let currentLevel = 4;
   let clickCount = 0;
   let score = 0;
+  let wrongAnswers = 0;
 
   function generateNewExpression() {
     clickCount++;
 
-    if (clickCount >= 5) {
-      clickCount = 0;
+    if (score >= 5) {
+      score = 0;
       currentLevel++;
       if (currentLevel > levels.length) {
         currentLevel = 1;
       }
       document.getElementById('level').innerHTML = `Level ${currentLevel}`;
+    }
+
+    if (clickCount >= 5) {
+      clickCount = 0;
     }
 
     const expressions = levels[currentLevel - 1];
@@ -119,9 +124,9 @@
     let convertedExpression = [];
     for (let i = 0; i < expressionText.length; i++) {
       if (expressionText[i] === "1") {
-        convertedExpression.push("true");
+        convertedExpression.push("1");
       } else if (expressionText[i] === "0") {
-        convertedExpression.push("false");
+        convertedExpression.push("0");
       } else if (expressionText[i] === "!") {
         convertedExpression.push("!");
       } else if (expressionText[i] === "×" || expressionText[i] === "*") {
@@ -137,12 +142,21 @@
 
     if (userAnswer === String(+correctAnswer)) {
       score++;
+      wrongAnswers = 0; // Reset wrong answers counter for correct answers
     } else {
-      score--;
+      score -= 2; // Wrong answer deducts 2 points
+      wrongAnswers++;
     }
 
     // Display the updated score
     document.getElementById('score').innerHTML = `Score: ${score}`;
+
+    // Check if user needs to drop down two levels
+    if (wrongAnswers === 3) {
+      currentLevel = Math.max(1, currentLevel - 2);
+      document.getElementById('level').innerHTML = `Level ${currentLevel}`;
+      wrongAnswers = 0; // Reset wrong answers counter after dropping down
+    }
 
     // Generate a new expression after checking the answer
     generateNewExpression();
