add some design

--- a/fromBeggining.html
+++ b/fromBeggining.html
@@ -25,7 +25,7 @@
     }
 
     #expression {
-      font-size: 24px;
+      font-size: 32px; /* Adjust the font size as needed */
       margin-bottom: 10px;
       user-select: none; /* Prevent text selection */
     }
@@ -50,7 +50,8 @@
     }
 
     #score-bar {
-      height: 20px;
+      height: 20px; /* Adjust the height as needed */
+      width: 200px; /* Adjusted width to 200px */
       border: 1px solid #ddd;
       border-radius: 5px;
       overflow: hidden;
