--- a/fromBeggining.html
+++ b/fromBeggining.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Logical Expressions Simulator</title>
+  <title>Logical Expressions Trainer</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <style>
     body {
@@ -19,40 +19,37 @@
       text-align: center;
       padding: 20px;
       border: 1px solid #dee2e6;
-      border-radius: 5px;
+      border-radius: 10px;
       background-color: #fff;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      margin-bottom: 20px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+      width: 400px;
     }
 
-    #expression {
-      font-size: 32px; /* Adjust the font size as needed */
-      margin-bottom: 10px;
-      user-select: none; /* Prevent text selection */
+    .expression {
+      font-size: 35px;/* Adjust the font size as needed */
+      /* margin-bottom: 10px; */
+      user-select: none;/* Prevent text selection */
     }
 
-    #level {
+    #level,
+    #scores {
       font-size: 18px;
       margin-bottom: 10px;
-    }
-
-    #scores {
-      font-size: 20px;
-      margin-bottom: 10px;
+      margin-top: 35px;
     }
 
     #check-button {
       font-size: 18px;
     }
 
-    #question-mark {
+    .question-mark {
       cursor: pointer;
       color: blue;
     }
 
     #score-bar {
-      height: 20px; /* Adjust the height as needed */
-      width: 200px; /* Adjusted width to 200px */
+      height: 20px;/* Adjust the height as needed */
+      width: 100%;/* Adjust the width as needed */
       border: 1px solid #ddd;
       border-radius: 5px;
       overflow: hidden;
